--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
