--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 BUNDLE_ANALYZER=false
-SITE_URL=https://aulianza.id
+SITE_URL_PROD=https://fihaa.my.id
+SITE_URL_DEV=http://localhost:3000
 
 # OpenAI
 OPENAI_API_KEY=
@@ -7,18 +8,9 @@ OPENAI_API_KEY=
 # DEV.to
 DEVTO_KEY=
 
-# Spotify
-SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIENT_SECRET=
-SPOTIFY_REFRESH_TOKEN=
-
-# WakaTime
-WAKATIME_CLIENT_ID=
-WAKATIME_CLIENT_SECRET=
-WAKATIME_CLIENT_REFRESH_TOKEN=
 
 # GitHub
-GITHUB_READ_USER_TOKEN_PERSONAL=
+GITHUB_READ_USER_TOKEN_PERSONAL=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
 GITHUB_READ_USER_TOKEN_WORK=
 
 # Prisma Database
