--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.2",
+    "@types/mdx": "^2.0.10",
     "aos": "^2.3.4",
     "axios": "^1.6.1",
     "clsx": "^2.0.0",
@@ -17,11 +21,13 @@
     "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
     "react-use-draggable-scroll": "^0.4.7",
