--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.11.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-scroll": "^1.9.0",
     "react-spinners": "^0.13.8",
     "react-use-draggable-scroll": "^0.4.7",
     "swr": "^2.2.4",
@@ -43,6 +44,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
