--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.2",
     "@types/mdx": "^2.0.10",
+    "@vercel/postgres": "^0.5.1",
     "aos": "^2.3.4",
     "axios": "^1.6.1",
     "clsx": "^2.0.0",
