--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
+    "next-client-cookies": "^1.1.0",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
